[package]
name = "error_occurence_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa = {version = "=4.1.0", features = ["axum_extras"]}
serde = {version = "=1.0", features = ["derive"]}
serde_derive = {version = "=1.0"}

[lints]
workspace = true
